--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "author": "Christopher Blanchard",
   "license": "MIT",
+  "release": {
+    "extends": "@cablanchard/semantic-release/dist/npm"
+  },
   "devDependencies": {
+    "@cablanchard/semantic-release": "~1.2.1",
     "@types/chai": "~4.1.7",
     "@types/mocha": "~5.2.5",
     "@types/node": "~12.0.0",
