feat(tsconfig): Disable sourcemaps by default
Generally don't ship TS files within npm packages so doesn't make sense
to include the sourcemaps

BREAKING CHANGE: Sourcemaps no longer generated by default. Set
`sourceMap: true` in tsconfig to reenable

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tsconfig.json"
   ],
   "scripts": {
-    "test": "NODE_ENV=test node_modules/.bin/mocha"
+    "test": "NODE_ENV=test mocha"
   },
   "mocha": {
     "spec": "tests/*.ts",
