--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tsconfig.json"
   ],
   "scripts": {
+    "semantic-release": "semantic-release",
     "test": "NODE_ENV=test mocha"
   },
   "mocha": {
