--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "~14.14.0",
     "chai": "~4.2.0",
     "mocha": "~8.2.0",
+    "semantic-release": "^17.3.0",
     "ts-node": "~9.0.0",
     "typescript": "~4.1.2"
   },
